# stackblox

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Game.cpp  Game.h  LICENSE  README.md  StackBlox.cpp  StackBlox.h  Version.h.in  build_android-v7a.sh  build_android-v8a.sh  build_ios.sh  build_linux.sh  build_mac.sh  build_windows.bat  cmake.py  conanfile.py  export_conan_recipes.py  icon.icns  install_cmake.py  iwyu.imp  main.cpp  profile.jinja
.github/workflows/: main.yml
Display/: CMakeLists.txt  Display.cpp  Display.h
DisplayTest/: CMakeLists.txt  DisplayTest.cpp
Piece/: CMakeLists.txt  Piece.cpp  Piece.h
PieceTest/: CMakeLists.txt  PieceTest.cpp
StackBlox.xcassets/AppIcon.appiconset/: Contents.json
Well/: CMakeLists.txt  Well.cpp  Well.h
WellTest/: CMakeLists.txt  WellTest.cpp
android/: .gitignore  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/templates/: MainActivity.java
assets_dontship/: icon.xcf
cmake/: add_executable_custom.cmake  add_sdl_executable.cmake  add_test_executable.cmake  export_options.plist  global_settings.cmake  info.plist.in  install_executable.cmake  install_ios.cmake  package_android_apk.cmake  package_ios_ipa.cmake  target_assets.cmake
profiles/: android.jinja  linux
src/: CMakeLists.txt  StackBlox.cpp  StackBlox.h  icon.icns  icon.rc  main.cpp
src/Engine/: CMakeLists.txt
src/Engine/Display/: CMakeLists.txt  Display.cpp  Display.h
src/Engine/DisplayTest/: CMakeLists.txt  DisplayTest.cpp
src/Engine/ErrorHandler/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Exceptions.h
src/Engine/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Piece/: CMakeLists.txt  Piece.cpp  Piece.h
src/PieceTest/: CMakeLists.txt  PieceTest.cpp
src/StackBlox.xcassets/AppIcon.appiconset/: Contents.json
src/Well/: CMakeLists.txt  Well.cpp  Well.h
src/WellTest/: CMakeLists.txt  WellTest.cpp
src/assets_dontship/: generate_icns.sh  icon.xcf
